# pyproject.toml.jinja

[project]
name = "hw07"
version = "0.1.0"
description = "Sparse Autoencoder for Feature Detection."
readme = "README.md"
authors = [
    { name = "Lennart Vetter", email = "my@email" }
]
requires-python = ">=3.13"
dependencies = [
    "structlog",
    "rich",
    "numpy",
    "jax[cpu]>=0.7.2",
    "jaxlib>=0.7.2",
    "flax",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "colorama",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
]

[project.scripts]
hw07 = "hw07:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
