# pyproject.toml.jinja

[project]
name = "hw08"
version = "0.1.0"
description = "Final project, positional paper."
readme = "README.md"
authors = [
    { name = "Lennart Vetter.", email = "my@email" }
]
requires-python = ">=3.13"
dependencies = [
    "structlog",
    "rich",
    "numpy",
    "jax[cpu]>=0.7.2", 
    "jaxlib>=0.7.2",
    "flax",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "colorama",
]

[project.scripts]
hw08 = "hw08:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
